# WifiMapLinux

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/: __main__.py
app/models/: __init__.py  access_point.py  building.py  database.py  floor.py  measurement.py
app/services/: export.py  help_content.py  i18n.py  interpolation.py  project.py  propagation.py  scanner.py  settings.py  voxel.py
app/ui/: ap_panel.py  building_panel.py  floor_plan_widget.py  floor_tab_bar.py  heatmap_controls.py  main_window.py  measurement_panel.py  section_view.py  voxel_view.py
app/ui/dialogs/: about_dialog.py  alignment_dialog.py  ap_dialog.py  building_dialog.py  floor_dialog.py  help_dialog.py  scan_dialog.py
docs/: Architecture-Decisions.md  Architecture.md  Data-Models.md  Decisions-Techniques.md  Modeles-Donnees.md  Roadmap.md
docs/Src/: wifi_routers_db.json  wifi_routers_db_doc.md
pkg/aur/: PKGBUILD  wifimaplinux.desktop
