[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wifimaplinux"
version = "2.0.1"
description = "Multi-floor residential Wi-Fi mapping tool for Linux"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "thongor77", email = "magetriste@proton.me" }]
requires-python = ">=3.11"
# PySide6 is a system dependency on Arch — omitted here, listed in PKGBUILD
dependencies = [
    "sqlmodel>=0.0.16",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "vispy>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/thongor77/WifiMapLinux"
Repository = "https://github.com/thongor77/WifiMapLinux"
"Bug Tracker" = "https://github.com/thongor77/WifiMapLinux/issues"

[project.scripts]
wifimaplinux = "app.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]
